# geo-dcsc

./: .env.sample  .gitignore  Dockerfile
src/: manage.py  pyproject.toml  requirements.txt  tasks.py  uwsgi.ini
src/geodcsc/: __init__.py  apps.py  celeryapp.py  settings.py  wsgi.py
src/geodcsc/br/: backup.sh  restore.sh
src/geodcsc/static/: package.json
src/geodcsc/static/css/: site_base.css
src/geodcsc/static/mapstore/gn-translations/: data.pt-BR.json
src/geodcsc/templates/geonode-mapstore-client/snippets/: footer.html
src/geosdc/: __init__.py  apps.py  celeryapp.py  settings.py  wsgi.py
src/geosdc/br/: backup.sh  restore.sh
src/geosdc/static/: package.json
src/geosdc/static/mapstore/gn-translations/: data.pt-BR.json
src/geosdc/templates/geonode-mapstore-client/snippets/: custom_theme.html
