[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geosdc"
version = "0.0.1"
description = "GeoNode Defesa Civil de Santa Catarina"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
keywords = ["project", "geonode", "django"]

# Equivalent modern replacement for dependency_links:
dependencies = [
  "GeoNode==5.0.1"
]

[project.urls]
Homepage = "https://github.com/nds-cprm/geo-dcsc"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# Equivalent to find_packages()
where = ["."]
